; ModuleID = '/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_reallocmsg.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/core/extr_global.c_nn_reallocmsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @nn_reallocmsg(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @nn_chunk_realloc(i64 %7, i8** %4)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  store i8* %12, i8** %3, align 8
  br label %16

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = sub nsw i32 0, %14
  store i32 %15, i32* @errno, align 4
  store i8* null, i8** %3, align 8
  br label %16

16:                                               ; preds = %13, %11
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

declare dso_local i32 @nn_chunk_realloc(i64, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
